--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </p>
             
             <div class="flex flex-col items-center gap-4">
-                <a href="https://pay.hotmart.com/W103428332E?checkoutMode=10" class="bg-terracotta hover:bg-terracotta-dark text-white font-bold py-4 px-8 rounded-full shadow-gold transition transform hover:scale-105 duration-300 text-lg w-full md:w-auto uppercase tracking-wide">
+                <a href="#oferta" class="bg-terracotta hover:bg-terracotta-dark text-white font-bold py-4 px-8 rounded-full shadow-gold transition transform hover:scale-105 duration-300 text-lg w-full md:w-auto uppercase tracking-wide">
                     Quero blindar o futuro do meu filho por R$ 27
                 </a>
                 <p class="text-gray-400 text-sm flex items-center gap-2">
@@ -160,7 +160,7 @@
     </section>
 
     <!-- SEÇÃO 4: O STACK (A OFERTA) -->
-    <section class="py-20 bg-white">
+    <section id="oferta" class="py-20 bg-white">
         <div class="container mx-auto px-6 max-w-6xl">
             <div class="text-center mb-16 fade-in-section">
                 <h2 class="font-serif text-4xl text-charcoal font-bold">O que você vai receber</h2>
